# scripts

./: README.md  install.sh  pyproject.toml
python/: .pdm-python  pyproject.toml
python/src/scripts/: confusion_matrix.py  count_hf_tokens.py  dataclass_finder.py  estimate_tokens.py  find_default_args.py  find_imports.py  function_info.py  getschema.py  json_freq.py  json_keys.py  json_shuf.py  json_to_table.py  listdir.py  match_deps.py  not_dataclass_finder.py  readtable.py  rename_json.py  rungpt.py  tg_notify.py  toggle_theme.py  toml2json.py
shell/: install.fish  template.bash  tmux-scrollback.fish
src/scripts/: find_imports.py  function_info.py  json_keys.py  match_deps.py  rungpt.py
